--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </div>
     </nav>
     <div class="wrapper">
+        <!-- Sec Home -->
         <section id="home">
             <img src="img/bakso.jpg"/>
             <div class="kolom">
@@ -31,5 +32,17 @@
             </div>
         </section>
         </div>
+        <!-- Sec type -->
+        <section id="type">
+            <div class="kolom">
+                <h2>PILIHAN PAKET</h2>
+                <P class="deskripsi">paket small=bakso kecil<br>paket medium=bakso kecil,urat/telur<br> paket jumbo=bakso kecil,urat dan telur,bakso beranak</p>
+            
+            </div>
+
+        </section>
+
+        
+
 </body>
 </html>
