--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Bakso Dewo</title>
+    <title>Bakso Arur</title>
 </head>
 <body>
     <nav>
@@ -25,7 +25,7 @@
         <section id="home">
             <img src="img/bakso.jpg"/>
             <div class="kolom">
-                <h2>BAKSO DEWO</h2>
+                <h2>BAKSO ARUR</h2>
                 <p class="deskripsi">Dijamin mantap pol</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sapiente animi numquam libero exercitationem error. Tempore unde dolorem vero reprehenderit.</p>
                 <p><a href="" class="tbl-biru">Order Now</a></p>
