--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Sec Home -->
         <section id="home">
             <img src="img/bakso.jpg"/>
-            <div class="kolom">
+            <div class="kolom-bakso">
                 <h2>BAKSO ARUR</h2>
                 <p class="deskripsi">Dijamin mantap pol</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sapiente animi numquam libero exercitationem error. Tempore unde dolorem vero reprehenderit.</p>
@@ -34,7 +34,7 @@
         </div>
         <!-- Sec type -->
         <section id="type">
-            <div class="kolom">
+            <div class="kolom-type">
                 <h2>PILIHAN PAKET</h2>
                 <P class="deskripsi">paket small=bakso kecil<br>paket medium=bakso kecil,urat/telur<br> paket jumbo=bakso kecil,urat dan telur,bakso beranak</p>
             
