--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lugrasimo&family=Titan+One&display=swap" rel="stylesheet">
     <title>Bakso Arur</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
 <div class="menu">
     <ul>
         <li><a href="#home">HOME</a></li>
-        <li><a href="#type">TYPE</a></li>
+        <li><a href="#type">MENU</a></li>
         <li><a href="#testi">TESTI</a></li>
         <li><a href="#contact">CONTACT US</a></li>
         <li><a href="#support">SUPPORT</a></li>
@@ -23,22 +26,32 @@
     <div class="wrapper">
         <!-- Sec Home -->
         <section id="home">
-            <img src="img/bakso.jpg"/>
+            <img src="img/bakso.png"/>
             <div class="kolom-bakso">
                 <h2>BAKSO ARUR</h2>
                 <p class="deskripsi">Dijamin mantap pol</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sapiente animi numquam libero exercitationem error. Tempore unde dolorem vero reprehenderit.</p>
-                <p><a href="" class="tbl-biru">Order Now</a></p>
+                <p><a href="" class="tbl-biru">Pilihan Menu</a></p>
             </div>
         </section>
         </div>
         <!-- Sec type -->
         <section id="type">
             <div class="kolom-type">
-                <h2>PILIHAN PAKET</h2>
-                <P class="deskripsi">paket small=bakso kecil<br>paket medium=bakso kecil,urat/telur<br> paket jumbo=bakso kecil,urat dan telur,bakso beranak</p>
+                <h2 class="h22" >PILIHAN PAKET</h2>
+                <P class="deskripsi1">paket small=bakso kecil<br>paket medium=bakso kecil,urat/telur<br> paket jumbo=bakso kecil,urat dan telur,bakso beranak</p>
             
-            </div>
+            <div class="baksomnu">
+                <div class="gambarbkso">
+                    <div class="small">
+            <img src="https://img.freepik.com/free-photo/high-angle-delicious-bakso-bowl-arrangement_23-2148967915.jpg?w=826&t=st=1690794915~exp=1690795515~hmac=7d86eada2b3e29ff962b69891aa64373b5c1025242d374888cc0ddea3b0cf73b"><p>Small 10k</p><a href="" class="tbl-order">Order Now</a></div>
+                <div class="medium" >
+                <img src="https://images.tokopedia.net/img/cache/700/VqbcmM/2021/7/7/c10671a0-13aa-47cc-ab95-cd42f166a1dd.jpg.webp" ><p>Medium 15k</p><a href="" class="tbl-order">Order Now</a></div>
+                <div class="jumbo">
+            <img src="https://images.tokopedia.net/img/cache/700/product-1/2017/4/23/1100164/1100164_16449c9c-70fe-47a7-8974-943158356672.jpg"><p>jumbo 25k</p><a href="" class="tbl-order">Order Now</a></div>
+                    
+        </div>
+                </div>
 
         </section>
 
